--- a/homework26/src/ba/bitcamp/homework26/news.html
+++ b/homework26/src/ba/bitcamp/homework26/news.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset='utf-8'>
 	<link rel="stylesheet" type="text/css" href="news.css">
 	<title>News</title>
 </head>
 <body>
 	<h1><center>News<center></h1>
 <div id="menu">
-	<a href="file:///C:/Users/Mladen13/Desktop/database/home.html">Home</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/squad.html">Squad</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/gallery.html">Gallery</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/news.html">News</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/history.html">History</a>
+	<a href="home.html">Home</a>
+	<a href="squad.html">Squad</a>
+	<a href="gallery.html">Gallery</a>
+	<a href="news.html">News</a>
+	<a href="history.html">History</a>
 </div>
 <div id="both">
 	
@@ -20,11 +21,11 @@
 
 		<p>
 			"I think we started the [La Liga] championship the way we did last season, at a very high level," said FC Barcelona head coach Luis Enrique in the San Mamés press room following his team's 1–0 victory on match day one. "We kept Athletic from creating danger and I think we played a very complete match," he added.
-		</p>
-		<p>
+		<br>
+		
 			Talking about the game in general, Luis Enrique praised the role of wing-backs Sergi Roberto and Jordi Alba in the context of the injuries to Dani Alves and Sergio Busquets.
-		</p>
-		<p>
+		
+		<br>
 			Here are the highlights of what the coach had to say:
 
 			"Overall, I'm satisfied. We created chances, a lot more than [Athletic]. Towards the end it got tough for us, of course, because the score was so close."
@@ -38,7 +39,7 @@
 	</div>
 
 	<div>
-		<img src="http://images.performgroup.com/di/library/omnisport/52/9e/luisenrique_odz73tbsg6091duqlde184hsv.jpg?t=766132096w=1000&h=750">
+		<img src="img/barca10.jpg">
 	</div>
 
 
@@ -65,7 +66,7 @@
 	</div>
 
 	<div>
-		<img src="http://media2.fcbarcelona.com/media/asset_publics/resources/000/181/201/size_640x360/2015-08-22_ATHLETIC-BARCELONA_16-Optimized.v1440358525.JPG">
+		<img src="img/barca11.JPG">
 	</div>
 
 
