--- a/homework26/src/ba/bitcamp/homework26/squad.html
+++ b/homework26/src/ba/bitcamp/homework26/squad.html
@@ -7,39 +7,39 @@
 <body>
 	<h1><center>Squad<center></h1>
 <div id="menu">
-	<a href="file:///C:/Users/Mladen13/Desktop/database/home.html">Home</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/squad.html">Squad</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/gallery.html">Gallery</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/news.html">News</a>
-	<a href="file:///C:/Users/Mladen13/Desktop/database/history.html">History</a>
+	<a href="home.html">Home</a>
+	<a href="squad.html">Squad</a>
+	<a href="gallery.html">Gallery</a>
+	<a href="news.html">News</a>
+	<a href="history.html">History</a>
 </div>
-<div id="tableDiv">
+<div>
 	<table>
 		<tr>
 			
-			<td><img src="http://media3.fcbarcelona.com/media/asset_publics/resources/000/179/211/size_1000x562/1000x562_TER_STEGEN.v1439293715.jpg"><center><br>Ter Stegen</center></td>
-			<td><img src="http://media3.fcbarcelona.com/media/asset_publics/resources/000/179/718/size_1000x562/1000x562_PIQUE.v1439457800.jpg"><center><br>Gerrard Pique</center></td>
-			<td><img src="http://media3.fcbarcelona.com/media/asset_publics/resources/000/179/586/size_1000x562/1000x562_MASCHERANO.v1439396409.jpg"><center><br>Javier Mascherano</center></td>
-			<td><img src="http://media3.fcbarcelona.com/media/asset_publics/resources/000/179/235/size_1000x562/1000x562_MATHIEU.v1439295197.jpg"><center><br>Jeremy Mathieu</center></td>
+			<td><img src="img/terStegen.jpg"><center><br>Ter Stegen</center></td>
+			<td><img src="img/pique.jpg"><center><br>Gerrard Pique</center></td>
+			<td><img src="img/mascherano.jpg"><center><br>Javier Mascherano</center></td>
+			<td><img src="img/mathieu.jpg"><center><br>Jeremy Mathieu</center></td>
 			
 		</tr>
 		<tr>
-			<td><img src="http://media2.fcbarcelona.com/media/asset_publics/resources/000/179/587/size_1000x562/1000x562_ALVES.v1439396514.jpg"><center><br>Dani Alves</center></td>
-			<td><img src="http://media2.fcbarcelona.com/media/asset_publics/resources/000/179/577/size_1000x562/1000x562_JORDI_ALBA.v1439395334.jpg"><center><br>Jordi Alba</center></td>
-			<td><img src="http://media2.fcbarcelona.com/media/asset_publics/resources/000/179/222/size_1000x562/1000x562_RAKITIC.v1439294106.jpg"><center><br>Ivan Rakitic</center></td>
-			<td><img src="http://media4.fcbarcelona.com/media/asset_publics/resources/000/179/735/size_1000x562/1000x562_SERGIO.v1439458088.jpg"><center><br>Sergio Busquets</center></td>
+			<td><img src="img/daniAlves.jpg"><center><br>Dani Alves</center></td>
+			<td><img src="img/jordiAlba.jpg"><center><br>Jordi Alba</center></td>
+			<td><img src="img/rakitic.jpg"><center><br>Ivan Rakitic</center></td>
+			<td><img src="img/busquets.jpg"><center><br>Sergio Busquets</center></td>
 			
 		</tr>
 		<tr>
-			<td><img src="http://media2.fcbarcelona.com/media/asset_publics/resources/000/179/582/size_1000x562/1000x562_INIESTA.v1439396180.jpg"><br><center>Andreas Iniesta</center></td>
-			<td><img src="http://media1.fcbarcelona.com/media/asset_publics/resources/000/179/233/size_1000x562/1000x562_SUAREZ.v1439295123.jpg"><br><center>Luis Suarez</center></td>
-			<td><img src="http://media3.fcbarcelona.com/media/asset_publics/resources/000/179/707/size_1000x562/1000x562_NEYMAR.v1439454916.jpg"><br><center>Neymar</center></td>
-			<td><img src="http://media3.fcbarcelona.com/media/asset_publics/resources/000/179/590/size_1000x562/1000x562_MESSI.v1439396618.jpg"><br><center>Leo Messi</center></td>
+			<td><img src="img/iniesta.jpg"><br><center>Andreas Iniesta</center></td>
+			<td><img src="img/suarez.jpg"><br><center>Luis Suarez</center></td>
+			<td><img src="img/neymar.jpg"><br><center>Neymar</center></td>
+			<td><img src="img/messi.jpg"><br><center>Leo Messi</center></td>
 		</tr>
 	</table>
 </div>
 <div>
-	<img id="cover" src="http://coverjunction.s3.amazonaws.com/manual/low/soccer1.jpg">
+	<img id="cover" src="img/club.jpg">
 </div>
 </body>
 </html>
